--- a/slimPersonPage.html
+++ b/slimPersonPage.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Slim Person Page</title>
-  <link rel="stylesheet" type="text/css" href="slimPersonPage.css">
-  <script src="slimPersonPage.js"></script>
+  <link rel="stylesheet" type="text/css" href="/slimPersonPage.css">
+  <script src="/slimPersonPage.js"></script>
 </head>
 <body>
   <p>Slim person page</p>
