Make TF request using pid/session

--- a/slimPersonPage.html
+++ b/slimPersonPage.html
@@ -7,6 +7,6 @@
   <script src="/slimPersonPage.js"></script>
 </head>
 <body>
-  <p>Slim person page</p>
+  <p id="bodyId">Slim person page</p>
 </body>
 </html>
