--- a/slimPersonPage.html
+++ b/slimPersonPage.html
@@ -7,6 +7,7 @@
   <script src="/slimPersonPage.js"></script>
 </head>
 <body>
-  <p id="bodyId">Slim person page</p>
+  <p id="tfData"></p>
+  <p id="ftUserData"></p>
 </body>
 </html>
