Add possibleDuplicates request

--- a/slimPersonPage.html
+++ b/slimPersonPage.html
@@ -14,5 +14,6 @@
   <p id="tpsData"></p>
   <p id="memoriesManagerData"></p>
   <p id="labelsData"></p>
+  <p id="possibleDuplicatesData"></p>
 </body>
 </html>
