Add Record Hints request

--- a/slimPersonPage.html
+++ b/slimPersonPage.html
@@ -15,5 +15,6 @@
   <p id="memoriesManagerData"></p>
   <p id="labelsData"></p>
   <p id="possibleDuplicatesData"></p>
+  <p id="recordHintsData"></p>
 </body>
 </html>
