--- a/slimPersonPage.html
+++ b/slimPersonPage.html
@@ -16,5 +16,6 @@
   <p id="labelsData"></p>
   <p id="possibleDuplicatesData"></p>
   <p id="recordHintsData"></p>
+  <p id="templeStatusData"></p>
 </body>
 </html>
