Add fs-user request

--- a/slimPersonPage.html
+++ b/slimPersonPage.html
@@ -17,5 +17,6 @@
   <p id="possibleDuplicatesData"></p>
   <p id="recordHintsData"></p>
   <p id="templeStatusData"></p>
+  <p id="fsUserData"></p>
 </body>
 </html>
