Add recents list request

--- a/slimPersonPage.html
+++ b/slimPersonPage.html
@@ -18,5 +18,6 @@
   <p id="recordHintsData"></p>
   <p id="templeStatusData"></p>
   <p id="fsUserData"></p>
+  <p id="recentsData"></p>
 </body>
 </html>
