Add header with ftuser data

--- a/slimPersonPage.html
+++ b/slimPersonPage.html
@@ -7,8 +7,10 @@
   <script src="/slimPersonPage.js"></script>
 </head>
 <body>
+  <header>
+    <p id="ftUserData" class="userHeader"></p>
+  </header>
   <p id="tfData"></p>
-  <p id="ftUserData"></p>
   <p id="casData"></p>
   <p id="watchData"></p>
   <p id="tpsData"></p>
