--- a/slimPersonPage.html
+++ b/slimPersonPage.html
@@ -10,6 +10,12 @@
   <header>
     <p id="ftUserData" class="userHeader"></p>
   </header>
+  <header>
+    <img id="personPortrait" height="42" width="42" type="hidden">
+    <h1 id="personFullNameHeader"></h1>
+    <div id="personHeader"></div>
+    <div id="labels" class="userHeader"></div>
+  </header>
   <p id="tfData"></p>
   <p id="casData"></p>
   <p id="watchData"></p>
