Add header for counts

--- a/slimPersonPage.html
+++ b/slimPersonPage.html
@@ -15,17 +15,22 @@
     <h1 id="personFullNameHeader"></h1>
     <div id="personHeader"></div>
     <div id="labels" class="userHeader"></div>
+    <p id="watchData"></p>
   </header>
-  <p id="tfData"></p>
-  <p id="casData"></p>
-  <p id="watchData"></p>
-  <p id="tpsData"></p>
-  <p id="memoriesManagerData"></p>
-  <p id="labelsData"></p>
-  <p id="possibleDuplicatesData"></p>
-  <p id="recordHintsData"></p>
-  <p id="templeStatusData"></p>
-  <p id="fsUserData"></p>
-  <p id="recentsData"></p>
+  <header>
+    <div id="sourcesCount"></div>
+    <div id="collaborateCount"></div>
+    <div id="memoriesCount"></div>
+    <div id="templeStatusIcon"></div>
+  </header>
+  <p id="lifeSketch"></p>
+  <p id="vitals"></p>
+  <p id="otherInformation"></p>
+  <p id="familyMembers"></p>
+  <p id="dataProblems"></p>
+  <p id="researchSuggestions"></p>
+  <p id="recordHints"></p>
+  <p id="possibleDuplicates"></p>
+  <p id="changeLogSummary"></p>
 </body>
 </html>
