Add changelog request

--- a/slimPersonPage.html
+++ b/slimPersonPage.html
@@ -32,5 +32,8 @@
   <p id="recordHints"></p>
   <p id="possibleDuplicates"></p>
   <p id="changeLogSummary"></p>
+  <p id="recentsData"></p>
+  <p id="fsUserData"></p>
+  <p id="casData"></p>
 </body>
 </html>
