Add delete person flag

--- a/slimPersonPage.html
+++ b/slimPersonPage.html
@@ -11,7 +11,7 @@
     <p id="ftUserData" class="userHeader"></p>
   </header>
   <header>
-    <img id="personPortrait" height="42" width="42" type="hidden">
+    <img id="personPortrait" height="42" width="42" title="2 memories requests are made per PID image. One to get url and one to retrieve image. Tree-data could fetch all urls so UI only needs 1 fetch each">
     <h1 id="personFullNameHeader"></h1>
     <div id="personHeader"></div>
     <div id="labels" class="userHeader"></div>
@@ -35,5 +35,6 @@
   <p id="possibleDuplicates"></p>
   <p id="changeLogSummary"></p>
   <p id="recentsData"></p>
+  <p id="deletePerson"></p>
 </body>
 </html>
