Add message count

--- a/slimPersonPage.html
+++ b/slimPersonPage.html
@@ -9,6 +9,7 @@
 <body>
   <header>
     <p id="ftUserData" class="userHeader"></p>
+    <p id="messageData" class="userHeader"></p>
   </header>
   <header>
     <img id="personPortrait" height="42" width="42" title="2 memories requests are made per PID image. One to get url and one to retrieve image. Tree-data could fetch all urls so UI only needs 1 fetch each">
